--- a/turtle_shell/index.html
+++ b/turtle_shell/index.html
@@ -1,4 +1,5 @@
-<html><head><title>Turtle Graphics Explorer</title><style>body{font-family:Verdana,Helvetica,Arial;padding:0;margin:0} #instructions{padding-left:.5em;font-size:.8em} #feedback{color:red;margin:0;padding:0;font-size:.6em} #title{display:inline;font-size: 16px; margin: 5px 0 5px 5px} #subtitle{display:inline;font-size: 12px} #turtle_buffer{display:box;font-family:Verdana,Helvetica,Arial;width:98%;height:99%;margin:5px;padding:1%} input[type=button]{margin-left:5px}</style><script src="js/turtle_global.js" ></script><script src="js/global_procedures.js" ></script></head><body bgcolor="white"><table style="margin:0;padding:0" width="100%" height="100%" cellpadding="0" cellspacing="0"><tr><td width="600" height="600" valign="top"><canvas id="canvas" width="600" height="600">Your browser does not support canvas, please upgrade.</canvas></td><td valign="top"> <h3 id="title">Turtle Shell:</h3> <h4 id="subtitle"> a turtle graphics explorer.</h4> <form style="width: 100%; height: 90%;"><textarea id="turtle_buffer">
+<!DOCTYPE HTML>
+<html><head><title>Turtle Graphics Explorer</title><style>body{font-family:Verdana,Helvetica,Arial;padding:0;margin:0} #instructions{padding-left:.5em;font-size:.8em} #feedback{color:red;margin:0;padding:0;font-size:.6em} #title{display:inline;font-size: 16px; margin: 5px 0 5px 5px} #subtitle{display:inline;font-size: 12px} #turtle_buffer{display:block;font-family:Verdana,Helvetica,Arial;width:98%;height:99%;margin:5px;padding:1%} input[type=button]{margin-left:5px}</style><script src="js/turtle_global.js" ></script><script src="js/global_procedures.js" ></script></head><body onload="RUN()" bgcolor="white"><table style="margin:0;padding:0" width="100%" height="100%" cellpadding="0" cellspacing="0"><tr><td width="600" height="600" valign="top"><canvas id="canvas" width="600" height="600">Your browser does not support canvas, please upgrade.</canvas></td><td valign="top"> <h3 id="title">Turtle Shell:</h3> <h4 id="subtitle"> a turtle graphics explorer.</h4> <form style="width: 100%; height: 90%;"><textarea id="turtle_buffer">
 //use valid javascript and procedures below, then click 'RUN'
 //eg:
 HIDE_TURTLE();//speedup rendering
@@ -6,7 +7,7 @@ REPEAT(50, function(){
     SET_LINE(RANDOM_COLOR());
     RANDOM_MOVE_IN_BOX(RAND(-10,10), RAND(-10, 10), RAND(-90, 90), RAND(-90, 90));
 });
-
+SHOW_TURTLE();
 /* PROCEDURES...
 
 FORWARD(len);
